	PR other/17361 	* c-opts.c (permit_fortran_options): Delete/obsolete global variable. 	(c_common_init_options): Remove #ifdef CL_F77 code.  Scan command 	line options for "-lang-asm" and if found allow any of the C-family 	front-end options. 	(c_common_handle_option): Remove last use of permit_fortran_options.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@88906 138bc75d-0d04-0410-961f-82ee72b054a4